refactor(): Review routes organisation, doc(): Update swagger.
